--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-
+<head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat:wght@100;400;500&display=swap" rel="stylesheet">
+</head>
 <body>
     <div id="app"></div>
     <script src="./dist/index.js"></script>
